--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Enums\Enums.csproj" />
+    <ProjectReference Include="..\TestTask\TestTask.csproj" />
   </ItemGroup>
 
 </Project>
